[package]
name = "mtproxy-rs"
version = "1.0.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]
description = "A high-performance MTProxy implementation in Rust using grammers-mtproto"
license = "GPL-2.0"
repository = "https://github.com/duyet/mtproxy-rs"
keywords = ["telegram", "proxy", "mtproto", "privacy", "security"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
bytes = "1.7"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
getrandom = "0.2"

# MTProto implementation - use existing battle-tested library
grammers-mtproto = "0.7"
grammers-crypto = "0.7"

# Crypto dependencies (some may be used by grammers internally)
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
aes = "0.8"
aes-gcm = "0.10"
openssl = { version = "0.10", features = ["vendored"] }
hmac = "0.12"
pbkdf2 = "0.12"

# TLS/HTTPS support
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "1.0"

# HTTP server for stats and client for config downloads
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
base64 = "0.22"

# System-level dependencies
libc = "0.2"
nix = { version = "0.30", features = ["user", "signal", "process"] }
mio = { version = "1.0", features = ["os-poll", "net"] }
socket2 = "0.5"

# Concurrency and data structures
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1.7"
once_cell = "1.21"

# Utilities
memchr = "2.7"
crc32fast = "1.4"
flate2 = "1.0"
zstd = "0.13"
num_cpus = "1.16"
rand = "0.8.5"
hex = "0.4.3"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.6"
pretty_assertions = "1.4"
tempfile = "3"
rand = "0.8"
futures = "0.3"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true

